# jj-vfs

./: ARCHITECTURE.md  Cargo.toml  README.md  TODO  daemon.toml
cli/: Cargo.toml
cli/src/: backend.rs  blocking_client.rs  main.rs  working_copy.rs
cli/tests/: runner.rs  test_init.rs
cli/tests/common/: mod.rs
daemon/: Cargo.toml
daemon/src/: hash.rs  main.rs  service.rs  store.rs  ty.rs  vfs.rs  vfs_mgr.rs
proto/: Cargo.toml  jj_interface.proto  lib.rs
server/: Cargo.toml
