[workspace]
members = ["daemon", "proto", "cli"]
resolver = "2"

[workspace.package]
authors = ["Benjamin Brittain <ben@brittain.org>"]
description = "cultivate your code"
version = "0.0.1"
documentation = "https://thelastyak.com/cultivate"

[workspace.dependencies]
async-trait = "0.1.83"
blake3 = { version = "1.5.4", features = ["traits-preview"] }
digest = "0.10"
jj-lib = {version = "0.24", default-features = true}
jj-lib-proc-macros = {version = "0.24", default-features = true}
jj-cli = "0.24"
tonic = "0.11.0"
prost = "0.12"
proto = { path = "./proto" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1"
zstd = "0.13.0"
nfsserve = "0.10"
