[workspace]
members = ["daemon", "proto", "cli"]
resolver = "2"

[workspace.package]
authors = ["Benjamin Brittain <ben@brittain.org>"]
description = "cultivate your code"
version = "0.0.1"
documentation = "https://thelastyak.com/cultivate"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.83"
blake3 = { version = "1.5.4", features = ["traits-preview"] }
clap = { version = "4.5.0", features = ["derive"] }
digest = "0.10"
futures = "0.3.30"
itertools = "0.12.1"
jj-cli = "0.24"
jj-lib = {version = "0.24", default-features = true}
jj-lib-proc-macros = {version = "0.24", default-features = true}
nfsserve = "0.10"
parking_lot = "0.12.3"
prost = "0.12"
proto = { path = "./proto" }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
toml = "0.8"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
tracing = "0.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3"
zstd = "0.13.0"
