[package]
name = "cli"
edition = "2021"
authors.workspace = true
description.workspace = true
version.workspace = true
documentation.workspace = true

[dependencies]
jj-lib.workspace = true
jj-cli.workspace = true
prost.workspace = true
tokio.workspace = true
tonic.workspace = true
proto.workspace = true
async-trait.workspace = true
zstd.workspace = true
tracing.workspace = true
itertools.workspace = true
clap.workspace = true
futures.workspace = true
