[package]
name = "daemon"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
digest.workspace = true
jj-lib-proc-macros.workspace = true
jj-lib.workspace = true
nfsserve.workspace = true
parking_lot.workspace = true
prost.workspace = true
proto = { path = "../proto" }
rand.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tonic-reflection.workspace = true
tonic.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
zstd.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
